--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" crossorigin="anonymous"></script>
     <script crossorigin="anonymous" src="https://cdn.jsDelivr.net/npm/launchdarkly-js-client-sdk@2.22.1"></script>
+    <script src="{{ url_for('static', filename='keys.js') }}"></script>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
 </head>
 
