update app name

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-    <div class="hero title header">LaunchDarkly Dog Photo App!</div>
+    <div class="hero title header">LaunchDogly Photo App!</div>
     <div class="dogphoto">
         <div style="padding-top: 10px; padding-bottom: 10px;">
             <div id="timebox_1" class="progressbar"></div>
